# snowcover

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yaml  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: ir-ground-detection-plan.md
models/: .gitkeep
scripts/: download_segmentation_model.py  download_weather_model.py
src/snowcover/: __init__.py  config.py  main.py
src/snowcover/detection/: __init__.py  detector.py  falling_snow.py  ground_cover.py  ground_segmentation.py  intensity.py
src/snowcover/mqtt/: __init__.py  ha_discovery.py  publisher.py
src/snowcover/stream/: __init__.py  rtsp_reader.py
src/snowcover/utils/: image_processing.py
src/snowcover/web/: __init__.py  server.py
